[package]
name = "hello-world-wasm-pack-lib"
description = "🦀 Greeter demo using wasm-pack to create an npm package"
version = "0.1.0"
authors = ["Jacob Hummer <jcbhmr@outlook.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.89"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.66", features = ["console"] }
js-sys = "0.3.66"
